--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -6,5 +6,6 @@
 
 {% block content %}
     {{ page.body|richtext }}
-    <p><a href="/blog/">Come see the doggy blog</a></p>
+    <p><a href="/blog/">Come see the doggy blog</a>&nbsp;<span style="float: right;"><a href="/admin/">Click here to log in to admin.</a></span></p>
+    
 {% endblock %}
