--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -5,7 +5,12 @@
 {% block body_class %}template-blogindexpage{% endblock %}
 
 {% block content %}
-    <div><h1>{{ page.title }}</h1><p align="right" ><a href="/">Return to home</a></p></div>
+    <div>
+    	<h1>{{ page.title }}</h1>
+    	<p align="right" >
+    		<a href="/">Return to home</a>
+   		</p>
+	</div>
     
     <div class="hr"><hr></div>
 
