--- a/blog/templates/blog/blog_page.html
+++ b/blog/templates/blog/blog_page.html
@@ -6,11 +6,11 @@
 
 {% block content %}
 	<div><h1>{{ page.title }}</h1> <p align="right"><a href="{{ page.get_parent.url }}">Return to blog</a></p></div>
-    <p class="meta">{{ page.date }}</p>
-
     <div class="intro">{{ page.intro }}</div>
 
     {{ page.body|richtext }}
+
+    <p class="meta" id="date_meta">{{ page.date }}</p>
 
     {% for item in page.gallery_images.all %}
         <div style="float: left; margin: 10px">
